# semantically

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
semantically/: __init__.py  async_request.py  client.py  config.py  datastructures.py  exceptions.py  request.py  response_codes.py  semantically.py
test/: test_responsehandling.py
