# Inside of setup.cfg
[metadata]
name = semantically
version = 0.2.2
author = Kay Herklotz
author_email = kay.herklotz@gmail.com
description = Semantically is a Python library designed to easily retrieve data from Semantic Scholar
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dev-89/semantically
project_urls =
    Bug Tracker = https://github.com/dev-89/semantically/issues

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6

[options.packages.find]
where = semantically